[gd_scene load_steps=11 format=3 uid="uid://c757otdjca6oh"]

[ext_resource type="Script" uid="uid://dmjm24ro8qao0" path="res://EnemyAI/BaseEnemy.gd" id="1_base"]
[ext_resource type="Script" uid="uid://dvanv42j3w4m" path="res://systems/fsm/StateMachine.gd" id="2_fsm"]
[ext_resource type="Script" uid="uid://divbrf64g8hv4" path="res://Combat/HealthComponent.gd" id="3_health"]
[ext_resource type="Script" uid="uid://cfci1tx7eki0u" path="res://Combat/HurtboxComponent.gd" id="4_hurtbox"]
[ext_resource type="Script" uid="uid://1xughcuh2x3v" path="res://Combat/HitboxComponent.gd" id="5_hitbox"]
[ext_resource type="Texture2D" uid="uid://cpevkofokkwdo" path="res://icon.svg" id="6_icon"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_perception"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hurtbox"]
size = Vector2(69, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(24, 24)

[node name="BaseEnemy" type="CharacterBody2D"]
script = ExtResource("1_base")
animated_sprite_path = NodePath("AnimatedSprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0, 0.5, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_icon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_body")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="PerceptionArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionArea"]
shape = SubResource("CircleShape2D_perception")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_fsm")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_health")
auto_register_with_save_service = false

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("4_hurtbox")
health_component_path = NodePath("../HealthComponent")
faction = "enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_hurtbox")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("5_hitbox")
faction = "enemy"
damage_amount = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_hitbox")
