[gd_scene load_steps=6 format=3 uid="uid://bqx8vj2k3x4y5"]

[ext_resource type="Script" path="res://EnemyAI/BaseEnemy.gd" id="1_0x8vj2k"]
[ext_resource type="Texture2D" uid="uid://cpevkofokkwdo" path="res://icon.svg" id="2_icon"]
[ext_resource type="Script" path="res://Example_Scenes/SimpleChaseEnemy.gd" id="3_simple_chase_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1x8vj2k"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_1x8vj2k"]
radius = 325.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("3_simple_chase_script")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1x8vj2k")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0, 0.5, 1)
position = Vector2(-1, 1.0000038)
scale = Vector2(0.43359375, 0.43359375)
texture = ExtResource("2_icon")

[node name="SightArea" type="Area2D" parent="."]
monitoring = true
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_1x8vj2k")

[connection signal="body_entered" from="SightArea" to="." method="_on_sight_area_body_entered"]
[connection signal="body_exited" from="SightArea" to="." method="_on_sight_area_body_exited"]
